mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  lables:
    app: mongodb-express
spec:
  replicas: 3
  selector:
    matchingLabel:
      app: mongodb-express
  template:
    metadata:
      lables:
        app: mongodb-express
    spec:
      containers:
      - name: mongo-express
        image: mongodb-express
        port:
        - containerPort: 8081
