mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  lables:
    app: mongodb
spec:
  replicas: 3
  selector: 
    labelmatching:
      app: mongodb
  template:
    metadata:
      lables:
        app: mangodb
      spec:
        containers:
        - name: mongodb
          image: mongo
          port:
          - conatinerPort: 27017
