mongo-ingress.yaml
apiVersion: v1
kind: Ingress
metadata: 
  name: mongo-ingress
  annotaions:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    host: app.com
      http:
        paths:
        - path: /annotation
          backend:
            serviceName:
            servicePort:
